user-grpc-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-grpc
spec:
  selector:
    matchLabels:
      app: user-grpc
  template:
    metadata:
      labels:
        app: user-grpc
    spec:
      containers:
        - name: user-grpc
          image: frost2203/go-user-grpc-service:v6
          resources:
            limits:
              memory: "128Mi"
              cpu: "50m"
          ports:
            - containerPort: 50051
