user-grpc-service/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-grpc
spec:
  selector:
    app: user-grpc
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
